--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.7.1",
     "webpack": "^2.5.0",
     "webpack-dev-server": "^2.4.5"
   },
