--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --watch",
+    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js --watch",
     "build": "NODE_ENV=production webpack -p --config webpack.config.js --progress --display-error-details --color"
   },
   "author": "",
@@ -21,7 +21,9 @@
     "css-loader": "^0.28.1",
     "eslint": "^3.19.0",
     "eslint-loader": "^1.7.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.0",
