--- a/package.json
+++ b/package.json
@@ -4,32 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --config webpack.config.js --watch",
-    "build": "NODE_ENV=production webpack -p --config webpack.config.js --progress --display-error-details --color"
+    "devBuild": "webpack app/index.js dist/bundle.js",
+    "prodBuild": "webpack src/js/app.js dist/bundle.js -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "css-loader": "^0.28.1",
-    "eslint": "^3.19.0",
-    "eslint-loader": "^1.7.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "node-sass": "^4.5.2",
-    "postcss-loader": "^1.3.3",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.17.0",
-    "webpack": "^2.5.0",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.23.0"
+    "webpack": "^2.5.0"
   }
 }
