--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "devBuild": "webpack app/index.js dist/bundle.js",
-    "prodBuild": "webpack src/js/app.js dist/bundle.js -p"
+    "prodBuild": "webpack app/index.js dist/bundle.js -p"
   },
   "author": "",
   "license": "ISC",
