--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "devBuild": "webpack app/index.js dist/bundle.js",
-    "prodBuild": "webpack app/index.js dist/bundle.js -p"
+    "build:dev": "webpack-dev-server --entry ./app/index.js --output-filename ./dist/bundle.js",
+    "build:prod": "webpack app/index.js dist/bundle.js -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^2.5.0"
+    "webpack": "^2.5.0",
+    "webpack-dev-server": "2.4.5"
   }
 }
