--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devBuild": "webpack app/index.js dist/bundle.js",
-    "build:dev": "webpack-dev-server --entry ./app/index.js --output-filename ./dist/bundle.js",
+    "build:dev": "webpack-dev-server",
     "build:prod": "webpack app/index.js dist/bundle.js -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "0.28.2",
+    "style-loader": "0.18.1",
     "webpack": "^2.5.0",
     "webpack-dev-server": "2.4.5"
   }
