--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:dev": "webpack-dev-server",
-    "build:prod": "webpack app/index.js dist/bundle.js -p"
+    "build:prod": "webpack -p"
   },
   "author": "",
   "license": "ISC",
