--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:dev": "webpack-dev-server",
+    "start": "webpack-dev-server",
     "build:prod": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-es2015": "6.24.1",
     "css-loader": "0.28.2",
+    "extract-text-webpack-plugin": "2.1.0",
+    "node-sass": "4.5.3",
     "style-loader": "0.18.1",
     "webpack": "^2.5.0",
     "webpack-dev-server": "2.4.5"
