--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css-loader": "0.28.2",
     "extract-text-webpack-plugin": "2.1.0",
     "node-sass": "4.5.3",
+    "postcss-loader": "2.0.5",
     "style-loader": "0.18.1",
     "webpack": "^2.5.0",
     "webpack-dev-server": "2.4.5"
