--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
   "devDependencies": {
     "babel-core": "6.24.1",
     "babel-loader": "7.0.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2017": "6.24.1",
     "css-loader": "0.28.2",
     "extract-text-webpack-plugin": "2.1.0",
     "node-sass": "4.5.3",
@@ -20,5 +25,6 @@
     "style-loader": "0.18.1",
     "webpack": "^2.5.0",
     "webpack-dev-server": "2.4.5"
-  }
+  },
+  "dependencies": {}
 }
