--- a/package.json
+++ b/package.json
@@ -26,5 +26,7 @@
     "webpack": "^2.5.0",
     "webpack-dev-server": "2.4.5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "3.2.1"
+  }
 }
