--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack -p"
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-es2017": "6.24.1",
+    "clean-webpack-plugin": "0.1.16",
     "css-loader": "0.28.2",
     "extract-text-webpack-plugin": "2.1.0",
     "node-sass": "4.5.3",
