--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "clean-webpack-plugin": "0.1.16",
     "css-loader": "0.28.2",
     "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
+    "html-loader": "0.4.5",
     "html-webpack-plugin": "2.28.0",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.5",
