--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "html-webpack-plugin": "2.28.0",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.5",
+    "pug-html-loader": "1.1.4",
     "style-loader": "0.18.1",
     "webpack": "^2.5.0",
     "webpack-dev-server": "2.4.5"
