--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2015-webpack": "6.4.3",
     "babel-preset-es2017": "6.24.1",
     "clean-webpack-plugin": "0.1.16",
     "css-loader": "0.28.2",
