--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack -p"
+     "start": "webpack-dev-server --env.platform=web --progress",
+    "build": "webpack -p --env.production --env.platform=default --progress"
   },
   "author": "",
   "license": "ISC",
