--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-es2017": "6.24.1",
     "clean-webpack-plugin": "0.1.16",
+    "codelyzer": "3.0.1",
     "css-loader": "0.28.2",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
@@ -29,6 +30,8 @@
     "pug-html-loader": "1.1.4",
     "style-loader": "0.18.1",
     "ts-loader": "2.1.0",
+    "tslint": "5.4.3",
+    "tslint-loader": "3.5.3",
     "typescript": "2.3.4",
     "webpack": "^2.5.0",
     "webpack-dev-server": "2.4.5"
