--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clean-webpack-plugin": "0.1.16",
     "codelyzer": "3.0.1",
     "css-loader": "0.28.2",
+    "exports-loader": "0.6.4",
     "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.11.1",
     "html-loader": "0.4.5",
