--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "0.11.1",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.28.0",
+    "imports-loader": "0.7.1",
     "node-sass": "4.5.3",
     "postcss-loader": "2.0.5",
     "pug-html-loader": "1.1.4",
