--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
+    "angular": "1.2.28",
+    "angular-ui-router": "0.2.18",
     "jquery": "3.2.1"
   }
 }
