--- a/package.json
+++ b/package.json
@@ -43,8 +43,9 @@
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
-    "angular": "1.2.28",
+    "angular": "1.6.9",
     "angular-ui-router": "0.2.18",
-    "jquery": "3.2.1"
+    "jquery": "3.2.1",
+    "ng-annotate-loader": "0.6.1"
   }
 }
